# DogeEngine2

./: CMakeLists.txt  main.cpp  readme.md
Deprecated/: OpenGLShaderManager.hpp
DogeEngine/: Context.hpp
DogeEngine/Data/: Resource.hpp  ResourceData.hpp  ResourceManager.hpp
DogeEngine/ECS/: ECSManager.hpp  Entity.hpp  Pipeline.hpp
DogeEngine/ECS/Components/: Component.hpp  HierarchyComponent.hpp  RenderComponent.hpp  TransformComponent.hpp
DogeEngine/ECS/Factories/: EntityFactory.hpp
DogeEngine/ECS/Systems/: PrintTransform.hpp  RenderSystem.hpp  System.hpp  UpdateTransforms.hpp
DogeEngine/IO/: Directory.hpp  GLTFScene.hpp  Image.hpp  InFile.hpp  OBJMesh.hpp
DogeEngine/Rendering/API/: Camera.hpp  DrawRequest.hpp  Material.hpp  VertexAttributes.hpp
DogeEngine/Rendering/OpenGL/: OpenGLApplication.hpp  OpenGLMesh.hpp  OpenGLMeshVariadic.hpp  OpenGLShaderManager.hpp  OpenGLShaderProgram.hpp  OpenGLTexture.hpp  OpenGLUBO.hpp
DogeEngine/Rendering/Shaders/: gltf.frag  simple_shaded.frag  simple_shaded.vert
DogeEngine/Rendering/Shaders/Materials/: GLTFMaterial.hpp  SimpleShadedMaterial.hpp
DogeEngine/Rendering/UI/: WindowApplication.hpp
DogeEngine/Utils/: GLMPrints.hpp  GenericVector.hpp
Resources/CompiledShaders/: shader.frag.spv  shader.vert.spv  simple_shaded.frag.spv  simple_shaded.vert.spv
Resources/Models/: gridworld.glb  heavy.glb
